--- a/complex/about.html
+++ b/complex/about.html
@@ -76,7 +76,7 @@
                     <img src="./assets/images/img-profil.jpg" class="img-responsive" alt=""> 
                 </div>
                 <div class="col-md-6">
-                    <h1 class="h2">James Torres</h1>
+                    <h1 class="h2">Chang Hsi</h1>
                     <p>Mi eget mauris pharetra et ultrices neque ornare. Pellentesque elit ullamcorper dignissim cras tincidunt
                         lobortis. Euismod in pellentesque massa placerat. Consectetur libero id faucibus nisl tincidunt eget.
                         Pulvinar etiam non quam lacus suspendisse. Tincidunt nunc pulvinar sapien et ligula ullamcorper malesuada.
