--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -81,7 +81,7 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="text-center section-container-spacer">
-          <h2 class="with-project-number"><span class="project-number">01</span>Night Photography</h2>
+          <h2 class="with-project-number"><span class="project-number">02</span>Night Photography</h2>
         </div>
         <div class="row section-container-spacer">
           <div class="col-md-4">
@@ -151,14 +151,14 @@
       <div class="col-xs-12 text-center">
         <ul class="navbar-nav nav">
           <li>
-            <a href="" title="" class="project-nav left"><span class="project-number">01</span>Previous</a>
+            <a href="./projectPage01.html" title="" class="project-nav left"><span class="project-number">01</span>Previous</a>
           </li>
         </ul>
         <p class="h5 navbar-text">Night Photography <i class="fa fa-chevron-down arrow-down" aria-hidden="true"></i></p>
 
         <ul class="navbar-nav nav navbar-right">
           <li>
-            <a href="" title="" class="project-nav right"><span class="project-number">03</span>Next </a>
+            <a href="./projectPage03.html" title="" class="project-nav right"><span class="project-number">03</span>Next </a>
           </li>
         </ul>
       </div>
