set up first month

--- a/complex/projectPage01.html
+++ b/complex/projectPage01.html
@@ -81,7 +81,7 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="text-center section-container-spacer">
-          <h2 class="with-project-number"><span class="project-number">01</span>Night Photography</h2>
+          <h2 class="with-project-number"><span class="project-number">01</span>First Month</h2>
         </div>
         <div class="row section-container-spacer">
           <div class="col-md-4">
@@ -150,7 +150,7 @@
     <div class="row">
       <div class="col-xs-12 text-center">
         
-        <p class="h5 navbar-text">Night Photography <i class="fa fa-chevron-down arrow-down" aria-hidden="true"></i></p>
+        <p class="h5 navbar-text"> First Month <i class="fa fa-chevron-down arrow-down" aria-hidden="true"></i></p>
 
         <ul class="navbar-nav nav navbar-right">
           <li>
