--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -81,7 +81,7 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="text-center section-container-spacer">
-          <h2 class="with-project-number"><span class="project-number">04</span>Night Photography</h2>
+          <h2 class="with-project-number"><span class="project-number">04</span>Fourth Month</h2>
         </div>
         <div class="row section-container-spacer">
           <div class="col-md-4">
@@ -154,7 +154,7 @@
             <a href="./projectPage03.html" title="" class="project-nav left"><span class="project-number">03</span>Previous</a>
           </li>
         </ul>
-        <p class="h5 navbar-text">Night Photography <i class="fa fa-chevron-down arrow-down" aria-hidden="true"></i></p>
+        <p class="h5 navbar-text">Fourth Month<i class="fa fa-chevron-down arrow-down" aria-hidden="true"></i></p>
 
         <ul class="navbar-nav nav navbar-right">
           <li>
