codecademy - Learn JavaSctipt

--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -95,14 +95,14 @@
                       </b>
                     </p>
                   </li>
-                  <li>Medium
+                  <li>JACASCRIPT.INFO
                     <p>
-                      <b>Learning From the Feynman Technique</b>
+                      <b>The modern JavaScript Tutorial</b>
                     </p>
                   </li>
-                  <li>LearnCode.academy  
+                  <li>codecademy  
                     <p>
-                      <b>How the Internet Works for Developers?</b>
+                      <b>Learn JavaScript</b>
                     </p>
                   </li>
                   <li>thenewboston  
