--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -105,12 +105,12 @@
                       <b>Learn JavaScript</b>
                     </p>
                   </li>
-                  <li>thenewboston  
+                  <li>eloquentjavascript.net  
                     <p>
-                      <b>Computer Networking Playlist</b>
+                      <b>Eloquent JavaScript (3rd Edition)</b>
                     </p>
                   </li>                  
-                  <li>Geek Gurl Diaries 
+                  <li>freeCodeCamp 
                     <p>
                       <b>Crash Course Computer Science</b>
                     </p>
