--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -112,7 +112,7 @@
                   </li>                  
                   <li>freeCodeCamp 
                     <p>
-                      <b>Crash Course Computer Science</b>
+                      <b>A Gentler Introduction to Programming</b>
                     </p>
                   </li>
                   <li>CS50  
