--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -115,9 +115,9 @@
                       <b>A Gentler Introduction to Programming</b>
                     </p>
                   </li>
-                  <li>CS50  
+                  <li>Frontend Masters  
                     <p>
-                      <b>CS50 lectures 2017</b>
+                      <b>Introduction to JavaScript Programming</b>
                     </p>
                   </li>
                   <li>Zed Shaw 
