--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -120,9 +120,9 @@
                       <b>Introduction to JavaScript Programming</b>
                     </p>
                   </li>
-                  <li>Zed Shaw 
+                  <li>Code School
                     <p>
-                      <b>Appendix A: Command Line Crash Course</b>
+                      <b>Learn JavaScript Online</b>
                     </p>
                   </li>
                   <li>LearnCode.academy 
