--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -125,9 +125,9 @@
                       <b>Learn JavaScript Online</b>
                     </p>
                   </li>
-                  <li>LearnCode.academy 
+                  <li>freeCodeCamp
                     <p>
-                      <b> How to put your website online?</b>
+                      <b> freeCodeCamp Guide</b>
                     </p>
                   </li>
                   <li>FrontendMasters 
