JavaScript ES6 CheatSheet - the best of JS ES6

--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -130,9 +130,9 @@
                       <b> freeCodeCamp Guide</b>
                     </p>
                   </li>
-                  <li>FrontendMasters 
+                  <li>LearnCode.academy 
                     <p>
-                      <b>Introduction to Web Development
+                      <b>JavaScript ES6 Cheatsheet - the best of JS ES6
                       </b>
                     </p>
                   </li>
