Learn Git Online

--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -136,9 +136,9 @@
                       </b>
                     </p>
                   </li>
-                  <li>LearnCode.academy 
+                  <li>Code School 
                     <b>
-                      <p> Boostrap Tutorial For Beginners</b>
+                      <p> Learn Git Online</b>
                       </p>
                     </li>
                   <li>Boostrap 
