2018 Must know Web Developement Tech

--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -141,9 +141,9 @@
                       <p> Learn Git Online</b>
                       </p>
                     </li>
-                  <li>Boostrap 
+                  <li>LearnCode.academy 
                     <p>
-                      <b> Introduction</b>
+                      <b>2018 MUST-KNOW WEB DEVELOPMWNT TECH</b>
                     </p>
                   </li>
                   <li>Boostrap 
