--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -143,12 +143,12 @@
                     </li>
                   <li>LearnCode.academy 
                     <p>
-                      <b>2018 MUST-KNOW WEB DEVELOPMWNT TECH</b>
+                      <b>Web Development 2018 - The Must-Know Tech</b>
                     </p>
                   </li>
-                  <li>Boostrap 
+                  <li>jargon.js.org
                     <p>
-                      <b>Boostrap Magic</b>
+                      <b>Simplified JS Jargon</b>
                     </p>
                   </li>
                   <li>Mashup Templatep 
