Web DeveLopment Tutorials For Beginners

--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -151,9 +151,9 @@
                       <b>Simplified JS Jargon</b>
                     </p>
                   </li>
-                  <li>Mashup Templatep 
+                  <li>LearnCode.academy 
                     <p>
-                      <b> Create your website in minutes</b>
+                      <b> Web Development Tutorials For Beginners</b>
                     </p>
                   </li>
                   <li>FreeCodeCamp 
