Front-End Deceloper Handnook 2017

--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -156,9 +156,9 @@
                       <b> Web Development Tutorials For Beginners</b>
                     </p>
                   </li>
-                  <li>FreeCodeCamp 
+                  <li>Frontend Masters 
                     <p>
-                      <b> Part about HTML and CSS</b>
+                      <b> Front-End Developer Handbook 2017</b>
                     </p>
                   </li>
                   
