Chrome Devtools Tutorial

--- a/complex/projectPage03.html
+++ b/complex/projectPage03.html
@@ -108,9 +108,9 @@
                       </b>
                     </p>
                   </li>
-                  <li>Medium
+                  <li>Code School
                     <p>
-                      <b>Learning From the Feynman Technique</b>
+                      <b>Chrome Devtools Tutorial</b>
                     </p>
                   </li>
                   <li>LearnCode.academy  
