--- a/complex/projectPage03.html
+++ b/complex/projectPage03.html
@@ -113,9 +113,9 @@
                       <b>Chrome Devtools Tutorial</b>
                     </p>
                   </li>
-                  <li>LearnCode.academy  
+                  <li>RisingStack  
                     <p>
-                      <b>How the Internet Works for Developers?</b>
+                      <b>The Evolution of Asynchronous JavaScript</b>
                     </p>
                   </li>
                   <li>thenewboston  
