--- a/complex/projectPage03.html
+++ b/complex/projectPage03.html
@@ -118,9 +118,9 @@
                       <b>The Evolution of Asynchronous JavaScript</b>
                     </p>
                   </li>
-                  <li>thenewboston  
+                  <li>JSConf 
                     <p>
-                      <b>Computer Networking Playlist</b>
+                      <b>Philp Roberts: What the heck is the event loop anyway?</b>
                     </p>
                   </li>                  
                   <li>Geek Gurl Diaries 
