--- a/complex/projectPage03.html
+++ b/complex/projectPage03.html
@@ -123,9 +123,9 @@
                       <b>Philp Roberts: What the heck is the event loop anyway?</b>
                     </p>
                   </li>                  
-                  <li>Geek Gurl Diaries 
+                  <li>Fun Fun Function 
                     <p>
-                      <b>Crash Course Computer Science</b>
+                      <b>async / await in JavaScript - What, Why and How</b>
                     </p>
                   </li>
                   <li>CS50  
