The good part of JavaScript and web

--- a/complex/projectPage03.html
+++ b/complex/projectPage03.html
@@ -128,9 +128,9 @@
                       <b>async / await in JavaScript - What, Why and How</b>
                     </p>
                   </li>
-                  <li>CS50  
+                  <li>Frontend Masters  
                     <p>
-                      <b>CS50 lectures 2017</b>
+                      <b>The Good Parts of JavaScript and the Web</b>
                     </p>
                   </li>
                   <li>Zed Shaw 
