--- a/complex/projectPage03.html
+++ b/complex/projectPage03.html
@@ -133,9 +133,9 @@
                       <b>The Good Parts of JavaScript and the Web</b>
                     </p>
                   </li>
-                  <li>Zed Shaw 
+                  <li>freeCodeCamp 
                     <p>
-                      <b>Appendix A: Command Line Crash Course</b>
+                      <b>JavaScript Modules: A Beginner's Guide </b>
                     </p>
                   </li>
                   <li>LearnCode.academy 
