A Beginner Guide to npm

--- a/complex/projectPage03.html
+++ b/complex/projectPage03.html
@@ -138,9 +138,9 @@
                       <b>JavaScript Modules: A Beginner's Guide </b>
                     </p>
                   </li>
-                  <li>LearnCode.academy 
+                  <li>sitepoint
                     <p>
-                      <b> How to put your website online?</b>
+                      <b> A Beginner's Guide to npm - the Node Package Manager</b>
                     </p>
                   </li>
                   <li>FrontendMasters 
