--- a/complex/projectPage03.html
+++ b/complex/projectPage03.html
@@ -143,10 +143,9 @@
                       <b> A Beginner's Guide to npm - the Node Package Manager</b>
                     </p>
                   </li>
-                  <li>FrontendMasters 
+                  <li>npm
                     <p>
-                      <b>Introduction to Web Development
-                      </b>
+                      <b>lodash</b>
                     </p>
                   </li>
                   <li>LearnCode.academy 
