--- a/complex/projectPage03.html
+++ b/complex/projectPage03.html
@@ -148,14 +148,14 @@
                       <b>lodash</b>
                     </p>
                   </li>
-                  <li>LearnCode.academy 
+                  <li>Scotch 
                     <b>
-                      <p> Boostrap Tutorial For Beginners</b>
+                      <p> Getting Started with Browserify</b>
                       </p>
                     </li>
-                  <li>Boostrap 
+                  <li>GitHub 
                     <p>
-                      <b> Introduction</b>
+                      <b> GitHub Pages</b>
                     </p>
                   </li>
                   <li>Boostrap 
