Learning Path and Detail

--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -86,21 +86,17 @@
         <div class="row section-container-spacer">
           <div class="col-md-4">
               <div class="section-container-spacer">
-                <h3>Photographic Project</h3>
+                <h3>Learning Path</h3>
                 <p>Menphis June, 2016</p>
               </div>
 
-              <h4>Credits & Crew</h4>
+              <h4>Detail</h4>
               
               <ul class="list-unstyled">
                 <li>Stanford</li> 
                 <li>Pablo Malice</li>
                 <li>Patricia Stano</li>
-              </ul>
-              
-
-              <p>Cityzen circus Association</p>
-              <p>Menphis City Hall</p>
+              </ul>       
           </div>
           <div class="col-md-8">
             <h3>How to exchange with the nocturnal light ?</h3>
