--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -93,7 +93,13 @@
               <h4>Detail</h4>
               
               <ul class="list-unstyled">
-                <li>Stanford</li> 
+                <li>LearnCode.academy
+                  <p>
+                    <b>
+                      REACT JS TUTORIAL    
+                    </b>
+                  </p>
+                </li> 
                 <li>Pablo Malice</li>
                 <li>Patricia Stano</li>
               </ul>       
