The Beginner Guide to REACTJS

--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -100,7 +100,13 @@
                     </b>
                   </p>
                 </li> 
-                <li>Pablo Malice</li>
+                <li>egghead.io 
+                  <p>
+                    <b>
+                      The Beginner's Guide to ReactJS
+                    </b>
+                  </p>
+                </li>
                 <li>Patricia Stano</li>
               </ul>       
           </div>
