Advanced React Conponent

--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -107,7 +107,14 @@
                     </b>
                   </p>
                 </li>
-                <li>Patricia Stano</li>
+                <li>egghead.io
+                  <p>
+                    <b>
+                      Advanced React Component
+                    </b>
+                  </p>
+                </li>
+                <li></li>
               </ul>       
           </div>
           <div class="col-md-8">
