Tutorial: Intro to React

--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -114,7 +114,13 @@
                     </b>
                   </p>
                 </li>
-                <li></li>
+                <li>React
+                  <p>
+                    <b>
+                      Tutorial: Intro To React
+                    </b>
+                  </p>
+                </li>
               </ul>       
           </div>
           <div class="col-md-8">
