Course for mastering the latest web technology

--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -121,6 +121,13 @@
                     </b>
                   </p>
                 </li>
+                <li>TYLERMCGINNIS.COM
+                  <p>
+                    <b>
+                      Courses for mastering the latest web technologies.
+                    </b>
+                  </p>
+                </li>
               </ul>       
           </div>
           <div class="col-md-8">
