--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -128,6 +128,13 @@
                     </b>
                   </p>
                 </li>
+                <li>btholt.github.io
+                  <p>
+                    <b>
+                      Complete Intro to React
+                    </b>
+                  </p>
+                </li>
               </ul>       
           </div>
           <div class="col-md-8">
