Getting Started with Redux

--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -135,6 +135,13 @@
                     </b>
                   </p>
                 </li>
+                <li>egghead.io
+                  <p>
+                    <b>
+                      Getting Started with Redux
+                    </b>
+                  </p>
+                </li>
               </ul>       
           </div>
           <div class="col-md-8">
