--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -142,6 +142,13 @@
                     </b>
                   </p>
                 </li>
+                <li>Redux
+                  <p>
+                    <b>
+                      Introduction
+                    </b>
+                  </p>
+                </li>
               </ul>       
           </div>
           <div class="col-md-8">
