Deploying with Git

--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -156,6 +156,13 @@
                     </b>
                   </p>
                 </li>
+                <li>Heroku Dev Center
+                  <p>
+                    <b>
+                      Deploying with Git
+                    </b>
+                  </p>
+                </li>
               </ul>       
           </div>
           <div class="col-md-8">
