--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -163,6 +163,13 @@
                     </b>
                   </p>
                 </li>
+                <li>Medium
+                  <p>
+                    <b>
+                      Today's most popular stories
+                    </b>
+                  </p>
+                </li>
               </ul>       
           </div>
           <div class="col-md-8">
