JavaScript Weekly and React Status

--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -170,6 +170,20 @@
                     </b>
                   </p>
                 </li>
+                <li>javascriptweekly.com
+                  <p>
+                    <b>
+                      JavaScript Weekly
+                    </b>
+                  </p>
+                </li>
+                <li>react.statuscode.com
+                  <p>
+                    <b>
+                      React Status
+                    </b>                    
+                  </p>
+                </li>
               </ul>       
           </div>
           <div class="col-md-8">
