An opinionated guide to writting developer resumes in 2017

--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -184,6 +184,13 @@
                     </b>                    
                   </p>
                 </li>
+                <li> freeCodeCamp
+                  <p>
+                    <b>
+                      An opinionated guide to writing developer resumes in 2017
+                    </b>
+                  </p>
+                </li>
               </ul>       
           </div>
           <div class="col-md-8">
