I spent 3 month applying ...

--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -191,6 +191,13 @@
                     </b>
                   </p>
                 </li>
+                <li>freeCodeCamp
+                  <p>
+                    <b>
+                      I spent 3 months applying to jobs after a coding boostcamp. Here's what I learned.
+                    </b>
+                  </p>                  
+                </li>
               </ul>       
           </div>
           <div class="col-md-8">
