--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -198,6 +198,13 @@
                     </b>
                   </p>                  
                 </li>
+                <li>Medium
+                  <p>
+                    <b>
+                      How to Interview, Land a job, and Get a Raise: An Unconventional Method for Programmers
+                    </b>
+                  </p>
+                </li>
               </ul>       
           </div>
           <div class="col-md-8">
