--- a/complex/projectPage04.html
+++ b/complex/projectPage04.html
@@ -87,7 +87,10 @@
           <div class="col-md-4">
               <div class="section-container-spacer">
                 <h3>Learning Path</h3>
-                <p>Menphis June, 2016</p>
+                <p> # websites</p>
+                <p> # books</p>
+                <p> # English Typing practice per day</p>
+                <p> # Github practicing per day</p>
               </div>
 
               <h4>Detail</h4>
