Change the order

--- a/complex/projectPage03.html
+++ b/complex/projectPage03.html
@@ -84,8 +84,92 @@
           <h2 class="with-project-number"><span class="project-number">03</span>Third Month</h2>
         </div>
         <div class="row section-container-spacer">
+          <div class="col-md-4">
+              <div class="section-container-spacer">
+                <h3>Learning Path</h3>
+                <p> # websites</p>
+                <p> # books</p>
+                <p> # English Typing practice per day</p>
+                <p> # Github practicing per day</p>
+              </div>
+
+              <h4>Detail</h4>
+              
+              <ul class="list-unstyled">
+                <li>Code School
+                  <p>
+                    <b>
+                      Chrome Devtools Tutorial   
+                    </b>
+                  </p>
+                </li> 
+                <li>RisingStack 
+                  <p>
+                    <b>
+                      The Evolution of Asynchronous JavaScript
+                    </b>
+                  </p>
+                </li>
+                <li>JSConf 
+                  <p>
+                    <b>
+                      Philp Roberts: What the heck is the event loop anyway?
+                    </b>
+                  </p>
+                </li>
+                <li>Fun Fun Function
+                  <p>
+                    <b>
+                      async / await in JavaScript - What, Why and How
+                    </b>
+                  </p>
+                </li>
+                <li>Frontend Masters 
+                  <p>
+                    <b>
+                      The Good Parts of JavaScript and the Web
+                    </b>
+                  </p>
+                </li>
+                <li>freeCodeCamp 
+                  <p>
+                    <b>
+                      JavaScript Modules: A Beginner's Guide 
+                    </b>
+                  </p>
+                </li>
+                <li>sitepoint
+                  <p>
+                    <b>
+                      A Beginner's Guide to npm - the Node Package Manager
+                    </b>
+                  </p>
+                </li>
+                <li>npm
+                  <p>
+                    <b>
+                      lodash
+                    </b>
+                  </p>
+                </li>
+                <li>Scotch 
+                  <p>
+                    <b>
+                      Getting Started with Browserify
+                    </b>
+                  </p>
+                </li>
+                <li>GitHub 
+                  <p>
+                    <b>
+                      GitHub Pages
+                    </b>
+                  </p>
+                </li>                    
+              </ul>     
+          </div>
           <div class="col-md-8">
-            <h3>How does Computer, Network, and Internet work? </h3>
+            <h3>How to exchange with the nocturnal light ?</h3>
             <p>Id eu nisl nunc mi ipsum faucibus vitae aliquet. Auctor urna nunc id cursus metus aliquam. A pellentesque sit amet
               porttitor eget dolor morbi. Interdum varius sit amet mattis. Tincidunt dui ut ornare lectus sit amet est placerat
               in. Diam volutpat commodo sed egestas. Praesent elementum facilisis leo vel fringilla est ullamcorper eget nulla.
@@ -96,70 +180,6 @@
               mattis molestie a iaculis. Gravida cum sociis natoque penatibus et magnis dis parturient montes. Ultrices gravida
               dictum fusce ut placerat orci. Id cursus metus aliquam eleifend mi in. Odio eu feugiat pretium nibh ipsum consequat.
             </p>
-          </div>
-          <div class="col-md-4">
-              <div class="section-container-spacer">
-                <h3>Learning Path</h3>
-                
-                <ul class="list-unstyled">
-                  <li>
-                    <p>
-                      <b>English Typing 1000 words per day
-                      </b>
-                    </p>
-                  </li>
-                  <li>Code School
-                    <p>
-                      <b>Chrome Devtools Tutorial</b>
-                    </p>
-                  </li>
-                  <li>RisingStack  
-                    <p>
-                      <b>The Evolution of Asynchronous JavaScript</b>
-                    </p>
-                  </li>
-                  <li>JSConf 
-                    <p>
-                      <b>Philp Roberts: What the heck is the event loop anyway?</b>
-                    </p>
-                  </li>                  
-                  <li>Fun Fun Function 
-                    <p>
-                      <b>async / await in JavaScript - What, Why and How</b>
-                    </p>
-                  </li>
-                  <li>Frontend Masters  
-                    <p>
-                      <b>The Good Parts of JavaScript and the Web</b>
-                    </p>
-                  </li>
-                  <li>freeCodeCamp 
-                    <p>
-                      <b>JavaScript Modules: A Beginner's Guide </b>
-                    </p>
-                  </li>
-                  <li>sitepoint
-                    <p>
-                      <b> A Beginner's Guide to npm - the Node Package Manager</b>
-                    </p>
-                  </li>
-                  <li>npm
-                    <p>
-                      <b>lodash</b>
-                    </p>
-                  </li>
-                  <li>Scotch 
-                    <b>
-                      <p> Getting Started with Browserify</b>
-                      </p>
-                    </li>
-                  <li>GitHub 
-                    <p>
-                      <b> GitHub Pages</b>
-                    </p>
-                  </li>               
-                </ul>                             
-              </div>
           </div>          
         </div>
 
