modified Learning Path

--- a/complex/projectPage01.html
+++ b/complex/projectPage01.html
@@ -88,14 +88,13 @@
               <div class="section-container-spacer">
                 <h3>Learning Path</h3>
 
-                <p> # English Typing practice per day</p>
-                <p> # websites</p>
-                <p> # books</p>
+                <p> English typing practice 1000 words per day</p>
+                <p> 13+ courses</p>
               </div>
 
               <p>
                 <button class="btn btn-warning" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                  Details About This Month 
+                  Details About This Month's Coureses
                 </button>
               </p>
 
