--- a/complex/about.html
+++ b/complex/about.html
@@ -70,12 +70,24 @@
                 </div>
                 <div class="col-md-6">
                     <h1 class="h2">Chang Hsi</h1>
-                    <p>Mi eget mauris pharetra et ultrices neque ornare. Pellentesque elit ullamcorper dignissim cras tincidunt
-                        lobortis. Euismod in pellentesque massa placerat. Consectetur libero id faucibus nisl tincidunt eget.
-                        Pulvinar etiam non quam lacus suspendisse. Tincidunt nunc pulvinar sapien et ligula ullamcorper malesuada.
-                        Ante in nibh mauris cursus mattis molestie a iaculis. Gravida cum sociis natoque penatibus et magnis
-                        dis parturient montes. Ultrices gravida dictum fusce ut placerat orci.</p>
+                    <div class = "col-md-6 col-xs-12">
+                      <h5>What's special About me?</h5>
+                      <p>Mi eget mauris pharetra et ultrices neque ornare. Pellentesque elit ullamcorper dignissim cras tincidunt
+                          lobortis. Euismod in pellentesque massa placerat. Consectetur libero id faucibus nisl tincidunt eget.</p>
+                    </div>
+                    
+                      <ul class = 'list-unstyled'><h5>Eduation and Working Experience</h5>
+                        <li>#</li>
+                        <li>#</li>
+                        <li>#</li>    
+                        <li>#</li>
+                        <li>#</li>
+                        <li>#</li>
+                        <li>#</li>
+                        <li>#</li>
 
+                      </ul>
+                    
                     <ul class="list-unstyled">
                         <li>
                             <a href="mailto:myemail@myemail.com" title="" class="link-like-text">email</a>
