change the style

--- a/complex/projectPage05.html
+++ b/complex/projectPage05.html
@@ -83,24 +83,133 @@
         <div class="text-center section-container-spacer">
           <h2 class="with-project-number"><span class="project-number">05</span>Fifth Month</h2>
         </div>
+        </div>
         <div class="row section-container-spacer">
           <div class="col-md-4">
               <div class="section-container-spacer">
-                <h3>Photographic Project</h3>
-                <p>Menphis June, 2016</p>
+                <h3>Learning Path</h3>
+                <p> # English Typing practice per day</p>
+                <p> # Github practicing per day</p>
+                <p> # websites</p>
+                <p> # books</p>
               </div>
 
-              <h4>Credits & Crew</h4>
+              <h4>Detail</h4>
               
               <ul class="list-unstyled">
-                <li>Stanford</li> 
-                <li>Pablo Malice</li>
-                <li>Patricia Stano</li>
-              </ul>
-              
-
-              <p>Cityzen circus Association</p>
-              <p>Menphis City Hall</p>
+                <li>LearnCode.academy
+                  <p>
+                    <b>
+                      REACT JS TUTORIAL    
+                    </b>
+                  </p>
+                </li> 
+                <li>egghead.io 
+                  <p>
+                    <b>
+                      The Beginner's Guide to ReactJS
+                    </b>
+                  </p>
+                </li>
+                <li>egghead.io
+                  <p>
+                    <b>
+                      Advanced React Component
+                    </b>
+                  </p>
+                </li>
+                <li>React
+                  <p>
+                    <b>
+                      Tutorial: Intro To React
+                    </b>
+                  </p>
+                </li>
+                <li>TYLERMCGINNIS.COM
+                  <p>
+                    <b>
+                      Courses for mastering the latest web technologies.
+                    </b>
+                  </p>
+                </li>
+                <li>btholt.github.io
+                  <p>
+                    <b>
+                      Complete Intro to React
+                    </b>
+                  </p>
+                </li>
+                <li>egghead.io
+                  <p>
+                    <b>
+                      Getting Started with Redux
+                    </b>
+                  </p>
+                </li>
+                <li>Redux
+                  <p>
+                    <b>
+                      Introduction
+                    </b>
+                  </p>
+                </li>
+                <li>GitHub
+                  <p>
+                    <b>
+                      Create React App
+                    </b>
+                  </p>
+                </li>
+                <li>Heroku Dev Center
+                  <p>
+                    <b>
+                      Deploying with Git
+                    </b>
+                  </p>
+                </li>
+                <li>Medium
+                  <p>
+                    <b>
+                      Today's most popular stories
+                    </b>
+                  </p>
+                </li>
+                <li>javascriptweekly.com
+                  <p>
+                    <b>
+                      JavaScript Weekly
+                    </b>
+                  </p>
+                </li>
+                <li>react.statuscode.com
+                  <p>
+                    <b>
+                      React Status
+                    </b>                    
+                  </p>
+                </li>
+                <li> freeCodeCamp
+                  <p>
+                    <b>
+                      An opinionated guide to writing developer resumes in 2017
+                    </b>
+                  </p>
+                </li>
+                <li>freeCodeCamp
+                  <p>
+                    <b>
+                      I spent 3 months applying to jobs after a coding boostcamp. Here's what I learned.
+                    </b>
+                  </p>                  
+                </li>
+                <li>Medium
+                  <p>
+                    <b>
+                      How to Interview, Land a job, and Get a Raise: An Unconventional Method for Programmers
+                    </b>
+                  </p>
+                </li>
+              </ul>       
           </div>
           <div class="col-md-8">
             <h3>How to exchange with the nocturnal light ?</h3>
