--- a/complex/projectPage05.html
+++ b/complex/projectPage05.html
@@ -97,10 +97,10 @@
               <h4>Detail</h4>
               
               <ul class="list-unstyled">
-                <li>LearnCode.academy
+                <li>developer.mozilla.org
                   <p>
                     <b>
-                      REACT JS TUTORIAL    
+                      MDN web docs    
                     </b>
                   </p>
                 </li> 
