--- a/complex/projectPage05.html
+++ b/complex/projectPage05.html
@@ -104,10 +104,10 @@
                     </b>
                   </p>
                 </li> 
-                <li>egghead.io 
+                <li>w3schools.com 
                   <p>
                     <b>
-                      The Beginner's Guide to ReactJS
+                      JSON - Introduction
                     </b>
                   </p>
                 </li>
