--- a/complex/projectPage05.html
+++ b/complex/projectPage05.html
@@ -111,10 +111,10 @@
                     </b>
                   </p>
                 </li>
-                <li>egghead.io
+                <li>w3schools.com
                   <p>
                     <b>
-                      Advanced React Component
+                      AJAX Introduction
                     </b>
                   </p>
                 </li>
