The Star Wars API

--- a/complex/projectPage05.html
+++ b/complex/projectPage05.html
@@ -125,10 +125,10 @@
                     </b>
                   </p>
                 </li>
-                <li>TYLERMCGINNIS.COM
+                <li>SWAPI
                   <p>
                     <b>
-                      Courses for mastering the latest web technologies.
+                      The Star Wars API
                     </b>
                   </p>
                 </li>
