--- a/complex/projectPage05.html
+++ b/complex/projectPage05.html
@@ -132,10 +132,10 @@
                     </b>
                   </p>
                 </li>
-                <li>btholt.github.io
+                <li>Youtube Channel
                   <p>
                     <b>
-                      Complete Intro to React
+                      Computerphile
                     </b>
                   </p>
                 </li>
