--- a/complex/projectPage05.html
+++ b/complex/projectPage05.html
@@ -139,10 +139,10 @@
                     </b>
                   </p>
                 </li>
-                <li>egghead.io
+                <li>www.raspberrypi.org
                   <p>
                     <b>
-                      Getting Started with Redux
+                      Raspberry Pi
                     </b>
                   </p>
                 </li>
