Raspberry Pi tutorial

--- a/complex/projectPage05.html
+++ b/complex/projectPage05.html
@@ -146,10 +146,10 @@
                     </b>
                   </p>
                 </li>
-                <li>Redux
+                <li>TechErudio
                   <p>
                     <b>
-                      Introduction
+                      Raspberry Pi Tutorials
                     </b>
                   </p>
                 </li>
