--- a/complex/projectPage05.html
+++ b/complex/projectPage05.html
@@ -153,10 +153,10 @@
                     </b>
                   </p>
                 </li>
-                <li>GitHub
+                <li>Codecademy
                   <p>
                     <b>
-                      Create React App
+                      Learn SQL
                     </b>
                   </p>
                 </li>
