four semesters of computer science in 5 hours

--- a/complex/projectPage05.html
+++ b/complex/projectPage05.html
@@ -160,10 +160,10 @@
                     </b>
                   </p>
                 </li>
-                <li>Heroku Dev Center
+                <li>Frontend Masters
                   <p>
                     <b>
-                      Deploying with Git
+                      Four Semesters of Computer Science in 5 Hours
                     </b>
                   </p>
                 </li>
