Add Firebase to your Javascript Project

--- a/complex/projectPage05.html
+++ b/complex/projectPage05.html
@@ -167,10 +167,10 @@
                     </b>
                   </p>
                 </li>
-                <li>Medium
+                <li>Firebase
                   <p>
                     <b>
-                      Today's most popular stories
+                      Add Firebase to your JavaScript Project
                     </b>
                   </p>
                 </li>
