Medium, The Two Pillars of JavaScript

--- a/complex/projectPage05.html
+++ b/complex/projectPage05.html
@@ -174,39 +174,16 @@
                     </b>
                   </p>
                 </li>
-                <li>javascriptweekly.com
+                <li>Medium, The Two Pillars of javaScript
                   <p>
                     <b>
                       JavaScript Weekly
                     </b>
                   </p>
-                </li>
-                <li>react.statuscode.com
                   <p>
                     <b>
                       React Status
                     </b>                    
-                  </p>
-                </li>
-                <li> freeCodeCamp
-                  <p>
-                    <b>
-                      An opinionated guide to writing developer resumes in 2017
-                    </b>
-                  </p>
-                </li>
-                <li>freeCodeCamp
-                  <p>
-                    <b>
-                      I spent 3 months applying to jobs after a coding boostcamp. Here's what I learned.
-                    </b>
-                  </p>                  
-                </li>
-                <li>Medium
-                  <p>
-                    <b>
-                      How to Interview, Land a job, and Get a Raise: An Unconventional Method for Programmers
-                    </b>
                   </p>
                 </li>
               </ul>       
