Part 1 and Part 2 about mediume topuc

--- a/complex/projectPage05.html
+++ b/complex/projectPage05.html
@@ -177,12 +177,12 @@
                 <li>Medium, The Two Pillars of javaScript
                   <p>
                     <b>
-                      JavaScript Weekly
+                      Part 1 : How to Escape the 7th Circle of Hell
                     </b>
                   </p>
                   <p>
                     <b>
-                      React Status
+                      Part 2 : Functional Programming (How to Stop Micromanaging Everything) 
                     </b>                    
                   </p>
                 </li>
