Anjana Vakil: Learning Functioinal Programming with JavaScript

--- a/complex/projectPage03.html
+++ b/complex/projectPage03.html
@@ -117,6 +117,13 @@
                     </b>
                   </p>
                 </li>
+                <li>JSConf 
+                  <p>
+                    <b>
+                      Anjana Vakil: Learning Functional Programming with JavaScript
+                    </b>
+                  </p>
+                </li>
                 <li>Fun Fun Function
                   <p>
                     <b>
