details (By Order)

--- a/complex/projectPage02.html
+++ b/complex/projectPage02.html
@@ -94,7 +94,7 @@
                 <p> # books</p>
               </div>
 
-              <h4>Detail</h4>
+              <h4>Details (By Order)</h4>
               
               <ul class="list-unstyled">
                 <li>JACASCRIPT.INFO
