--- a/complex/projectPage01.html
+++ b/complex/projectPage01.html
@@ -94,7 +94,7 @@
 
               <p>
                 <button class="btn btn-warning" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                  Details About This Month's Coureses
+                  Details About This Month's Coureses (By Order)
                 </button>
               </p>
 
