--- a/complex/projectPage03.html
+++ b/complex/projectPage03.html
@@ -93,7 +93,7 @@
                 <p> # books</p>
               </div>
 
-              <h4>Detail</h4>
+              <h4>Details (By Order)</h4>
               
               <ul class="list-unstyled">
                 <li>Code School
